# xcursor-viewer

./: .gitignore  CMakeLists.txt  README.md  dialog.cpp  dialog.h  dialog.ui  main.cpp
